--- a/src/main/resources/static/styles/profile.css
+++ b/src/main/resources/static/styles/profile.css
@@ -9,6 +9,7 @@ a
     text-decoration: none;
     cursor: pointer;
 }
+
 a:hover
 {
     color: var(--textColor);
@@ -112,5 +113,5 @@ a:hover
     border: none;
     background-color: var(--actionColor);
     color: white;
-    filter: drop-shadow(0px 2px 3px rgba(0, 0, 0, 0.25));
+    filter: drop-shadow(0 2px 3px rgba(0, 0, 0, 0.25));
 }
