Add tests for logging out
Add functional tests for logging out
Adjust the profile html to have IDs on the buttons

--- a/src/main/resources/templates/profile/accountInfo.html
+++ b/src/main/resources/templates/profile/accountInfo.html
@@ -18,21 +18,21 @@
     <section id="contentContainer">
         <div id="profileNavContainer">
             <a href="/account/info">
-                <div class="profileNav active">
+                <div class="profileNav active" id="accountInfoButton">
                     <span>Account info</span>
                 </div>
             </a>
-            <a href="/account/collections">
+            <a href="/account/collections" id="collectionsButton">
                 <div class="profileNav">
                     <span>Tree collection</span>
                 </div>
             </a>
-            <a href="/account/orders">
+            <a href="/account/orders" id="ordersButton">
                 <div class="profileNav">
                     <span>Orders</span>
                 </div>
             </a>
-            <a href="/logout">
+            <a href="/logout" id="logoutButton">
                 <div class="profileNav">
                     <span>Log out</span>
                 </div>
