--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -29,7 +29,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
 	<!--  Description of the site to be linked -->
 	<meta property="og:description"   content="Create your family tree in engraved wood!" />
 	<!--  Image that will show up on the link on FaceBook -->
-	<meta property="og:image"         content="https://treecreate.dk/img/images/treeDesign/tree.png" />
+	<meta property="og:image"         content="https://treecreate.dk/img/images/treeDesign/tree1.svg" />
 	<!--  End of FaceBook headers -->
 	
 </head>
