--- a/src/main/resources/static/styles/draggableBox.css
+++ b/src/main/resources/static/styles/draggableBox.css
@@ -14,6 +14,8 @@
     align-items: center;
     position: absolute;
     z-index: 98;
+    top : 0;
+    left : 0;
     height: 0;
     width: 0;
 }
