--- a/src/main/resources/static/styles/login.css
+++ b/src/main/resources/static/styles/login.css
@@ -16,7 +16,7 @@
 .modal-content
 {
     border-radius: 23px !important;
-    padding: 6vh;
+    padding: 3vh 12vh;
 }
 
 .loginForm h1
@@ -30,12 +30,39 @@
     text-align: left;
 }
 
+.loginForm a
+{
+    color: var(--inactiveColor);
+}
+
+#forgotPassword:hover, #signUp:hover
+{
+    color: var(--mainColor);
+    text-decoration: none;
+}
+
+#justText:hover
+{
+    text-decoration: none;
+    color: var(--inactiveColor);
+}
+
+.logo
+{
+    margin:2vh 0.5vh;
+    width: 5vh;
+}
+
+.logo:hover
+{
+    transform: scale(1.1);
+}
+
 .loginForm input
 {
     padding: 0 0 3px 7px;
     text-align: left;
     border-style: hidden;
-    font-size: 24px;
     width: 100%;
     transition: color, 1s;
 }
@@ -65,10 +92,11 @@
 .loginForm button
 {
     margin-top: 25px;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.17);
     background-color: var(--actionColor);
     color: white;
     border-radius: 7px;
-    width: 40%;
+    width: 90%;
     height: 40px;
     font-size: 24px;
     border: none;
@@ -87,6 +115,12 @@
 
 @media all and (min-width: 200px) and (max-width: 1024px)
 {
+    .modal-content
+    {
+        border-radius: 23px !important;
+        padding: 3vh 6vh;
+    }
+
     .loginForm h1
     {
         font-size: 48px;
