--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -13,30 +13,31 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share+Tech">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spectral">
     <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&family=Sansita+Swashed:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&family=Sansita+Swashed:wght@500&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet" href="">
     <script th:src="@{/js/familyTree.js}"></script>
     <script th:src="@{/js/login.js}"></script>
     <script th:src="@{/js/saveDesign.js}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    
-<!--  FACEBOOK HEADERS -->
-<!-- You can use Open Graph tags to customize link previews.
-Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
 
-	<!--  Website URL "https://www.your-domain.com/your-page.html"-->
-	<meta property="og:url"           content="https://treecreate.dk/products/familyTree" />
-	<!--  Type of content -->
-	<meta property="og:type"          content="website" />
-	<!--  Title of the site -->
-	<meta property="og:title"         content="Tree Create" />
-	<!--  Description of the site to be linked -->
-	<meta property="og:description"   content="Create your family tree in engraved wood!" />
-	<!--  Image that will show up on the link on FaceBook -->
-	<meta property="og:image"         content="https://treecreate.dk/img/images/treeDesign/tree1.svg" />
-	<!--  End of FaceBook headers -->
-	
+    <!--  FACEBOOK HEADERS -->
+    <!-- You can use Open Graph tags to customize link previews.
+    Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
+
+    <!--  Website URL "https://www.your-domain.com/your-page.html"-->
+    <meta property="og:url" content="https://treecreate.dk/products/familyTree"/>
+    <!--  Type of content -->
+    <meta property="og:type" content="website"/>
+    <!--  Title of the site -->
+    <meta property="og:title" content="Tree Create"/>
+    <!--  Description of the site to be linked -->
+    <meta property="og:description" content="Create your family tree in engraved wood!"/>
+    <!--  Image that will show up on the link on FaceBook -->
+    <meta property="og:image" content="https://treecreate.dk/img/images/treeDesign/tree1.svg"/>
+    <!--  End of FaceBook headers -->
+
 </head>
 <body>
 <section th:replace="products/productTemplate :: #navigationContainer"></section>
@@ -45,21 +46,94 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
 
 <div id="fb-root"></div>
 <script>
-(function(d, s, id) 
-	{
-		var js, fjs = d.getElementsByTagName(s)[0];
-		if (d.getElementById(id)) return;
-		js = d.createElement(s); js.id = id;
-		js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
-		fjs.parentNode.insertBefore(js, fjs);
-	}
-	(document, 'script', 'facebook-jssdk'));
+    (function (d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
+        fjs.parentNode.insertBefore(js, fjs);
+    }
+    (document, 'script', 'facebook-jssdk'));
 </script>
 
 <!-- End of Load FaceBook SDK for JavaScript -->
 
 <section id="contentContainer">
     <div id="content">
+        <!--<div id="popupContainer" class="popupContainer">
+            <div id="popup" class="popup"><p id="popupText">Welcome Back!</p></div>
+        </div>-->
+        <!-- Login modal -->
+        <div class="modal fade" id="addToBasketModal" role="dialog">
+            <div class="modal-dialog" id="addToBasketContainer">
+                <section id="addToBasketHeader">
+                    <div id="addToBasketBackBtn" data-dismiss="modal">Back</div>
+                </section>
+                <section id="addToBasketContent">
+                    <section id="addToBasketTreeDesign">
+                        <div id="addToBasketTreeImage"></div>
+                    </section>
+                    <section id="addToBasketDetails">
+                        <div id="addToBasketPrice" class="addToBasketDetail">
+                            <label for="priceInput" id="priceLabel">Price: </label>
+                            <input type="text" name="priceInput" id="priceInput" value="695kr" readonly>
+                        </div>
+                        <div id="addToBasketAmount" class="addToBasketDetail">
+                            <div class="fancySelection">
+                                <div class="fancyHeader"><span>Amount</span>
+                                    <div id="amountInfoIcon" class="addToBasketInfoIcon"></div>
+                                </div>
+                                <div class="fancyContent">
+                                    <div class="arrowLeft" id="amountArrowLeft" alt="<"></div>
+                                    <input type="text" id="amountInput" class="fancyInput" value="1" readonly>
+                                    <div class="arrowRight" id="amountArrowRight" alt=">"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="addToBasketSize" class="addToBasketDetail">
+                            <div class="fancySelection">
+                                <div class="fancyHeader"><span>Product Size</span>
+                                    <div id="productSizeInfoIcon" class="addToBasketInfoIcon"></div>
+                                </div>
+                                <div class="fancyContent">
+                                    <div class="arrowLeft" id="sizeArrowLeft" alt="<"></div>
+                                    <input type="text" id="sizeInput" class="fancyInput" value="30x30 cm" readonly>
+                                    <div class="arrowRight" id="sizeArrowRight" alt=">"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="addToBasketButtonContainer" class="addToBasketDetail">
+                            <div id="recommendedSizes">
+                                <p>
+                                    Recommended size: <br>
+                                    20x20 | up to 20 names <br>
+                                    25x25 | up to 30 names <br>
+                                    30x30 | up to 40 names <br>
+                                </p>
+                                <input type="button" id="addToBasketButton" value="ADD TO BASKET" onclick="addToBasket()" readonly>
+                            </div>
+                        </div>
+                    </section>
+                </section>
+                <section id="addToBasketFooter">
+                    <p>
+                        Note: When you purchase this tree you are automatically paying to plant a tree in the amazon forest.
+                    </p>
+                    <p>
+                        Note: Packaging is made of recycled materials that are eco friendly and the paper is FSC certified
+                    </p>
+                    <p>
+                        Note: The wood that is used for the design is a high quality hard oak and is produced here in denmark.
+                    </p>
+                </section>
+            </div>
+
+            <!--<div id="popupModalContainer" class="popupContainer">
+                <div id="popupModal" class="popup"><p id="popupModalText">Welcome Back!</p></div>
+            </div>-->
+        </div>
+
         <div id="productContainer">
             <div id="product">
                 <div id="familyTreeDesignContainer">
@@ -88,7 +162,6 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                                 </textPath>
                             </text>
                         </svg>
-
                     </div>
                 </div>
                 <div id="familyTreeOptionsContainer">
@@ -108,10 +181,10 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
 
                     <div id="font">
                         <label for="fontInput">Font</label><br>
-                        <select id = "fontInput">
-                            <option value = "0">Spectral</option>
-                            <option value = "1">Sansita swashed</option>
-                            <option value = "2">Roboto slab</option>
+                        <select id="fontInput">
+                            <option value="0">Spectral</option>
+                            <option value="1">Sansita swashed</option>
+                            <option value="2">Roboto slab</option>
                         </select>
                     </div>
 
@@ -137,6 +210,12 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                      border: none; border-radius: 5px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.75);"
                             onclick="saveDesign()">
                         Save Design
+                    </button>
+
+                    <button id="addToBasket" style="margin: 1vh; padding: 0.5vh; background-color: var(--actionColor);
+                     border: none; border-radius: 5px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.75);"
+                            data-toggle="modal" data-target="#addToBasketModal">
+                        Add To Basket
                     </button>
                 </div>
             </div>
