--- a/src/main/resources/static/styles/productNavbar.css
+++ b/src/main/resources/static/styles/productNavbar.css
@@ -15,11 +15,13 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    overflow: hidden;
 
     width: 100%;
     min-height: 6vh;
     height: fit-content;
-    background-color: white;
+    background-color: rgba(255,255,255,0.8);
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
 }
 
@@ -35,12 +37,22 @@
 {
     display: inline-block;
     font-size: var(--fontRegular);
+    letter-spacing: 0.36px;
     height: 4vh;
+    padding: 0px 20px;
     width: fit-content;
-    padding: 0.5vh 0.6vh;
     color: var(--navbarMainColor);
     position: relative; /* Used to align the hoverLine element properly */
     text-decoration: none; /* Boostrap import for the login breaks the decoration and it has to be nullified again*/
+}
+
+a::before {
+    display: block;
+    content: attr(title);
+    font-weight: bold;
+    height: 0;
+    overflow: hidden;
+    visibility: hidden;
 }
 
 #navBar a .hoverLine
@@ -50,7 +62,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 0.5vh;
+    height: 2px;
     color: white;
     border: none;
     margin: 0
@@ -63,15 +75,35 @@
     background-color: var(--navbarMainColor);
 }
 
+#navBar-right a:hover
+{
+    transform: scale(1.15);
+}
+
 #navBar .icon
 {
-    width: 4vh;
+    width: 3.5vh;
     vertical-align: middle;
+}
+
+#navBar-left .icon:hover
+{
+    transform: scale(1.1);
 }
 
 #navBar-right .icon
 {
     width: 2.7vh;
+}
+
+#navBar-right
+{
+    margin: 1.5vh 1vh 0vh 0vh;
+}
+
+#changeLanguageIcon .icon:hover
+{
+    transform: scale(1.15);
 }
 
 #profileButton
