--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -19,6 +19,7 @@
     <script th:src="@{/js/familyTree.js}"></script>
     <script th:src="@{/js/login.js}"></script>
     <script th:src="@{/js/saveDesign.js}"></script>
+    <script th:src="@{/js/addToBasket.js}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
@@ -85,9 +86,9 @@
                                     <div id="amountInfoIcon" class="addToBasketInfoIcon"></div>
                                 </div>
                                 <div class="fancyContent">
-                                    <div class="arrowLeft" id="amountArrowLeft" alt="<"></div>
+                                    <div class="arrowLeft" id="amountArrowLeft" alt="<" onclick="decreaseAmount()"></div>
                                     <input type="text" id="amountInput" class="fancyInput" value="1" readonly>
-                                    <div class="arrowRight" id="amountArrowRight" alt=">"></div>
+                                    <div class="arrowRight" id="amountArrowRight" alt=">" onclick="increaseAmount()"></div>
                                 </div>
                             </div>
                         </div>
@@ -97,9 +98,9 @@
                                     <div id="productSizeInfoIcon" class="addToBasketInfoIcon"></div>
                                 </div>
                                 <div class="fancyContent">
-                                    <div class="arrowLeft" id="sizeArrowLeft" alt="<"></div>
+                                    <div class="arrowLeft" id="sizeArrowLeft" alt="<" onclick="decreaseSize()"></div>
                                     <input type="text" id="sizeInput" class="fancyInput" value="30x30 cm" readonly>
-                                    <div class="arrowRight" id="sizeArrowRight" alt=">"></div>
+                                    <div class="arrowRight" id="sizeArrowRight" alt=">" onclick="increaseSize()"></div>
                                 </div>
                             </div>
                         </div>
