--- a/src/main/resources/templates/products/generateFamilyTree.html
+++ b/src/main/resources/templates/products/generateFamilyTree.html
@@ -19,12 +19,13 @@
     <script th:src="@{/js/login.js}"></script>
     <script th:src="@{/js/saveDesign.js}"></script>
     <script th:src="@{/js/generateDesign.js}"></script>
+    <script th:src="@{/js/addToBasket.js}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
     <!--  FACEBOOK HEADERS -->
     <!-- You can use Open Graph tags to customize link previews.
-    Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
+Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
 
     <!--  Website URL "https://www.your-domain.com/your-page.html"-->
     <meta property="og:url"           content="https://treecreate.dk/products/familyTree" />
@@ -61,6 +62,79 @@
 
 <section id="contentContainer">
     <div id="content">
+        <!--<div id="popupContainer" class="popupContainer">
+            <div id="popup" class="popup"><p id="popupText">Welcome Back!</p></div>
+        </div>-->
+        <!-- Login modal -->
+        <div class="modal fade" id="addToBasketModal" role="dialog">
+            <div class="modal-dialog" id="addToBasketContainer">
+                <section id="addToBasketHeader">
+                    <div id="addToBasketBackBtn" data-dismiss="modal">Back</div>
+                </section>
+                <section id="addToBasketContent">
+                    <section id="addToBasketTreeDesign">
+                        <div id="addToBasketTreeImage"></div>
+                    </section>
+                    <section id="addToBasketDetails">
+                        <div id="addToBasketPrice" class="addToBasketDetail">
+                            <label for="priceInput" id="priceLabel">Price: </label>
+                            <input type="text" name="priceInput" id="priceInput" value="695kr" readonly>
+                        </div>
+                        <div id="addToBasketAmount" class="addToBasketDetail">
+                            <div class="fancySelection">
+                                <div class="fancyHeader"><span>Amount</span>
+                                    <div id="amountInfoIcon" class="addToBasketInfoIcon"></div>
+                                </div>
+                                <div class="fancyContent">
+                                    <div class="arrowLeft" id="amountArrowLeft" alt="<" onclick="decreaseAmount()"></div>
+                                    <input type="text" id="amountInput" class="fancyInput" value="1" readonly>
+                                    <div class="arrowRight" id="amountArrowRight" alt=">" onclick="increaseAmount()"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="addToBasketSize" class="addToBasketDetail">
+                            <div class="fancySelection">
+                                <div class="fancyHeader"><span>Product Size</span>
+                                    <div id="productSizeInfoIcon" class="addToBasketInfoIcon"></div>
+                                </div>
+                                <div class="fancyContent">
+                                    <div class="arrowLeft" id="sizeArrowLeft" alt="<" onclick="decreaseSize()"></div>
+                                    <input type="text" id="sizeInput" class="fancyInput" value="30x30 cm" readonly>
+                                    <div class="arrowRight" id="sizeArrowRight" alt=">" onclick="increaseSize()"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="addToBasketButtonContainer" class="addToBasketDetail">
+                            <div id="recommendedSizes">
+                                <p>
+                                    Recommended size: <br>
+                                    20x20 | up to 20 names <br>
+                                    25x25 | up to 30 names <br>
+                                    30x30 | up to 40 names <br>
+                                </p>
+                                <input type="button" id="addToBasketButton" value="ADD TO BASKET" onclick="addToBasket()" readonly>
+                            </div>
+                        </div>
+                    </section>
+                </section>
+                <section id="addToBasketFooter">
+                    <p>
+                        Note: When you purchase this tree you are automatically paying to plant a tree in the amazon forest.
+                    </p>
+                    <p>
+                        Note: Packaging is made of recycled materials that are eco friendly and the paper is FSC certified
+                    </p>
+                    <p>
+                        Note: The wood that is used for the design is a high quality hard oak and is produced here in denmark.
+                    </p>
+                </section>
+            </div>
+
+            <!--<div id="popupModalContainer" class="popupContainer">
+                <div id="popupModal" class="popup"><p id="popupModalText">Welcome Back!</p></div>
+            </div>-->
+        </div>
+
         <div id="productContainer">
             <div id="product">
                 <div id="familyTreeDesignContainer">
@@ -138,6 +212,12 @@
                      border: none; border-radius: 5px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.75);"
                             onclick="saveDesign()">
                         Save Design
+                    </button>
+
+                    <button id="addToBasket" style="margin: 1vh; padding: 0.5vh; background-color: var(--actionColor);
+                     border: none; border-radius: 5px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.75);"
+                            data-toggle="modal" data-target="#addToBasketModal">
+                        Add To Basket
                     </button>
                 </div>
             </div>
