--- a/src/main/resources/static/styles/familyTreeAddToBasket.css
+++ b/src/main/resources/static/styles/familyTreeAddToBasket.css
@@ -139,13 +139,15 @@
 
 .addToBasketInfoIcon
 {
-    min-height: 25px;
-    min-width: 25px;
-    height: 2vh;
-    width: 2vh;
+    min-height: 15px;
+    min-width: 15px;
+    height: 1.5vh;
+    width: 1.5vh;
     margin: 0 0.25vw;
-    background-image: url("../img/icons/png/questionIcon.png");
+    background-image: url("../img/icons/questionIcon.svg");
     background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center;
 }
 
 .addToBasketInfoIcon:hover
@@ -182,9 +184,16 @@
 
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
     background-color: var(--actionColor);
-    background-image: url("../img/icons/png/arrow.png");
+    background-image: url("../img/icons/leftArrow.svg");
     background-repeat: no-repeat;
     background-position: center;
+}
+
+.arrowLeft:hover
+{
+    border-radius: 25%;
+    border: none;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.75);
 }
 
 .arrowRight
@@ -196,14 +205,16 @@
 
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
     background-color: var(--actionColor);
-    background-image: url("../img/icons/png/arrow.png");
+    background-image: url("../img/icons/rightArrow.svg");
     background-repeat: no-repeat;
     background-position: center;
-    transform: rotate(180deg);
-    /* All browsers support */
-    -moz-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
+}
+
+.arrowRight:hover
+{
+    border-radius: 25%;
+    border: none;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.75);
 }
 
 #recommendedSizes
